# nirphot

./: .gitignore  README.md  pyproject.toml  test.py  test.toml
scripts/: webbpsfs.py
src/nirphot/: __init__.py  logger.py  paths.py  utils.py
src/nirphot/images/: makewebbpsf.py  query.py  utils.py
src/nirphot/photometry/: catalog.py  compute.py  utils.py
src/nirphot/plotting/: psfs.py
