[project]
name = "nirphot"
version = "0.1.2"
description = "Developing a photometry pipeline for JWST NIRCam"
readme = "README.md"
authors = [
    { name = "Nikhil Garuda", email = "nikhilgaruda@live.com" }
]
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.0",
    "astroquery>=0.4.10",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "rasterio>=1.4.3",
    "regions>=0.10",
    "scikit-image>=0.25.2",
    "scipy>=1.16.0",
    "shapely>=2.1.1",
    "stpsf>=2.1.0",
    "tqdm>=4.67.1",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/*venv/**/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jedi>=0.19.2",
    "jedi-language-server>=0.45.1",
    "pyrefly>=0.22.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool]

[project.scripts]
webbpsfs = "scripts.webbpsfs:main"
